@@ -150,7 +150,7 @@ the OPLS/AA force field.
 
 """
 
-__all__ = ['Universe', 'Writer', 'fetch_mmtf',
+__all__ = ['Universe', 'Writer',
            'AtomGroup', 'ResidueGroup', 'SegmentGroup']
 
 import logging
@@ -209,7 +209,6 @@ from .core.groups import AtomGroup, ResidueGroup, SegmentGroup
 from .coordinates.core import writer as Writer
 
 # After Universe import
-from .coordinates.MMTF import fetch_mmtf
 from . import converters
 
 from .due import due, Doi, BibTeX
